--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -8,7 +8,9 @@ services:
     image: todo_app:v1
     container_name: server
     #env_file: .env
+    command: "yarn start"
     volumes:
       - ./src:/app/
+    restart: always
     ports:
       - "80:8080"
