:sparkles: completed the todo app

--- a/todo-app/docker-compose-dev.yml
+++ b/todo-app/docker-compose-dev.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - ./client:/app/client
     restart: always
-    command: sh -c "yarn && yarn build && yarn start"
+    command: sh -c "yarn && yarn dev"
     ports:
       - "3000:3000"
     networks:
