--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 todo-app/node_modules/
+todo-app/client/node_modules/
+todo-app/client/.next
+todo-app/client/build
+todo-app/server/node_modules/
 todo-app/yarn.lock
 *~*
 **/yarn-error.log
